<resources>
    <string name="app_name">Mooder</string>

    <!-- Options Menu Strings-->
    <string name="status_list_activity">Status List</string>
    <string name="date_activity">Date Chart</string>
    <string name="mood_chart_activity">Mood Chart</string>
    <string name="help_activity">Help</string>
    <string name="title_activity_date">Date Activity</string>
    <string name="add_new_status_activity">Add New Status</string>

    <!-- Title Strings-->
    <string name="title_app">Mooder</string>
    <string name="title_tab_status">Status</string>
    <string name="title_tab_chart">Chart</string>
    <string name="title_tab_stats">Stats</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mood">MoodActivity</string>

    <string name="title_feelings">Feelings</string>
    <string name="title_location">Location</string>
    <string name="title_activity">Activity</string>
    <string name="title_person">Person</string>

    <!-- Status Message-->
    <string name="status_list_empty">You have no status message yet!</string>


    <!-- Spinner objects-->
    <string-array name="spinner_array">
        <item></item>
    </string-array>

    <!-- Status List font family -->
    <string name="mood_font_family">sans-serif-medium</string>
    <string name="info_font_family">sans-serif</string>
    <string name="notes_font_family">sans-serif</string>

    <!-- Edit/Delete string -->
    <string name="edit_delete">sans-serif-medium</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>

</resources>
