<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".StatusListActivity">
    <item android:id="@+id/status_list_activity" android:title="@string/status_list_activity"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/add_new_status_list_activity" android:title="@string/add_new_status_activity"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/add_new_status_feelings_activity" android:title="Add New Feelings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/add_new_status_person_activity" android:title="Add New Person"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/add_new_status_location_activity" android:title="Add New Location"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/add_new_activity" android:title="Add New Activity"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/date_activity" android:title="@string/date_activity"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/mood_chart_activity" android:title="@string/mood_chart_activity"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/help_activity" android:title="@string/help_activity"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
