<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/status_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:tag="collapsed">
         <!--card_view:cardElevation="2dp"-->
         <!--card_view:cardUseCompatPadding="true">-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/mood_image"
                android:layout_width="@dimen/mood_image"
                android:layout_height="@dimen/mood_image"
                android:padding="7dp"
                android:src="@drawable/angry"/>

            <RelativeLayout
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingEnd="3dp"
                android:layout_toRightOf="@+id/mood_image">

                <TextView
                    android:id="@+id/mood"
                    android:text="ANGRY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@string/mood_font_family"
                    android:textSize="@dimen/mood_text_size"/>

                <RelativeLayout
                    android:id="@+id/mood_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mood">

                    <RelativeLayout
                        android:id="@+id/info_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp">

                        <ImageView
                            android:id="@+id/mood_location_img"
                            android:src="@drawable/location"
                            android:alpha=".40"
                            android:padding="2dp"
                            android:layout_width="@dimen/info_image"
                            android:layout_height="@dimen/info_image"
                            android:adjustViewBounds="true"/>

                        <TextView
                            android:id="@+id/mood_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/mood_location_img"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:text="Makati"
                            android:textColor="@color/primaryText"
                            android:fontFamily="@string/info_font_family"
                            android:textSize="@dimen/info_text_size"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/info_person"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/info_location"
                        android:paddingRight="5dp">

                        <ImageView
                            android:id="@+id/mood_person_img"
                            android:src="@drawable/person"
                            android:alpha=".40"
                            android:padding="2dp"
                            android:layout_width="@dimen/info_image"
                            android:layout_height="@dimen/info_image"
                            android:adjustViewBounds="true" />

                        <TextView
                            android:id="@+id/mood_person"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/mood_person_img"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:text="Juan dela Cruz"
                            android:textColor="@color/primaryText"
                            android:fontFamily="@string/info_font_family"
                            android:textSize="@dimen/info_text_size"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/info_activity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/info_person"
                        android:paddingRight="5dp">

                        <ImageView
                            android:id="@+id/mood_activity_img"
                            android:src="@drawable/activity"
                            android:alpha=".40"
                            android:padding="2dp"
                            android:layout_width="@dimen/info_image"
                            android:layout_height="@dimen/info_image"
                            android:adjustViewBounds="true" />

                        <TextView
                            android:id="@+id/mood_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/mood_activity_img"
                            android:maxWidth="100dp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:gravity="center_vertical"
                            android:text="work"
                            android:textColor="@color/primaryText"
                            android:fontFamily="@string/info_font_family"
                            android:textSize="@dimen/info_text_size"/>

                    </RelativeLayout>

                </RelativeLayout>

                <TextView
                    android:id="@+id/mood_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mood_info"
                    android:gravity="center_vertical"
                    android:textColor="@color/secondaryText"
                    android:fontFamily="@string/notes_font_family"
                    android:textSize="@dimen/note_text_size"
                    android:scrollHorizontally="true"
                    android:ellipsize="end"
                    android:maxLines="1"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/misc"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_below="@+id/status"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:padding="8dp">

                <TextView
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:padding="8dp"
                    android:layout_marginEnd="4dp"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/edit_delete_text_size_exp"
                    android:fontFamily="@string/edit_delete"
                    android:text="@string/edit"/>

                <TextView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:padding="8dp"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/edit"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/edit_delete_text_size_exp"
                    android:fontFamily="@string/edit_delete"
                    android:text="@string/delete"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>